ingress/caddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nevarezcloud-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  ingressClassName: caddy
  rules:
  - host: "sonarr-k3s.nevarez.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
  - host: "radarr-k3s.nevarez.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
  - host: "jackett-k3s.nevarez.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
